Text is too close to border. Fixed (#715)

--- a/frontend/css/common_styles.css
+++ b/frontend/css/common_styles.css
@@ -6,8 +6,6 @@
 
     .responsive-center {
         flex-basis: 100%;
-        padding-right: 1px;
-        padding-left: 1px;
     }
 
     #mainArea {
